formance-local/05-console.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: console
  namespace: formance-sit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
        - name: console
          image: ghcr.io/formancehq/console-v3:v2.2.1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: formance-sit
spec:
  selector:
    app: console
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
