formance-local/06-flows-wallets.yaml
########################
# FLOWS (Orchestration)
########################

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flows
  namespace: formance-sit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flows
  template:
    metadata:
      labels:
        app: flows
    spec:
      containers:
        - name: flows
          image: ghcr.io/formancehq/orchestration:latest
          args:
            - serve
            - --worker
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: flows
  namespace: formance-sit
spec:
  selector:
    app: flows
  ports:
    - port: 8080
      targetPort: 8080

########################
# WALLETS
########################

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallets
  namespace: formance-sit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallets
  template:
    metadata:
      labels:
        app: wallets
    spec:
      containers:
        - name: wallets
          image: ghcr.io/formancehq/wallets:latest
          args:
            - serve
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: wallets
  namespace: formance-sit
spec:
  selector:
    app: wallets
  ports:
    - port: 8080
      targetPort: 8080
