formance-local/07-ingress-formance.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: console-ingress
  namespace: formance-sit
  annotations:
    # Optional: Force HTTP to HTTPS redirect
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect@kubernetescrd
spec:
  rules:
    - host: formance.dev.netwallet.co # Your external domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console # Points to the Service above
                port:
                  number: 3000
